orchestrator-service/deploy/granular-deployment-orchestrator.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: deploy-system
  labels:
    istio-injection: enabled
---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  namespace: deploy-system
  name: cluster-builder-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - cb.i.dknc.io
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: deploy-system
  name: cluster-builder-ingress
spec:
  hosts:
    - '*'
  gateways:
    - cluster-builder-gateway
  http:
    - route:
        - destination:
            host: cluster-builder
---

apiVersion: v1
kind: Service
metadata:
  name: cluster-builder
  namespace: deploy-system
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: granular-deployment-orchestrator
  type: ClusterIP
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: granular-deployment-orchestrator
  namespace: deploy-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: granular-deployment-orchestrator
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: granular-deployment-orchestrator
    spec:
      serviceAccountName: deploy-orchestrator
      containers:
        - image: 10.0.10.1:5000/granular-deployment-orchestrator:latest
          name: granular-deployment-orchestrator
          ports:
            - containerPort: 8080
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /actuator/health
              port: 8080
            periodSeconds: 5
            successThreshold: 2
            timeoutSeconds: 3
            initialDelaySeconds: 30
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health
              port: 8080
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 3
            initialDelaySeconds: 30
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1Gi
---
